# cs-rpc

./: .gitignore  README.md
.github/workflows/: build.yml
client/: README.md  go.mod  go.sum
client/cmd/csrpc/: flags.go  gui_browser.go  gui_webview.go  main.go  tray_other.go  tray_windows.go  worker.go
client/internal/gui/: hub.go  index.html  server.go
client/internal/rpc/: client.go  client_test.go  errors.go  options.go  protocol.go  transport.go
client/internal/worker/: control.go  handlers.go  wallpaper.go  wallpaper_other.go  wallpaper_windows.go  worker.go  worker_test.go
docs/: 00_overview.md  01_client_go.md  02_server_python.md  03_protocol_and_commands.md
server/: README.md  pyproject.toml
server/app/: __init__.py  config.py  control.py  dispatcher.py  main.py  middleware.py  presets.py  protocol.py  web.py
server/app/handlers/: __init__.py  echo.py  math_ops.py  sys_info.py
server/app/static/: index.html
server/tests/: test_control.py  test_rpc.py
