[project]
name = "cs-rpc-server"
version = "0.1.0"
description = "cs-rpc server: generic JSON-RPC 2.0 over HTTP (FastAPI)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",        # FastAPI TestClient backend
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.handlers"]

[tool.setuptools.package-data]
app = ["static/*.html"]
